package sn.sadikh.examen_javafx.model.enums;

public enum Role {
    ADMIN, MEDECIN, RECEPTIONNISTE
}
