package sn.sadikh.examen_javafx.model.enums;

public enum StatutPaiement {
    PAYE, NON_PAYE
}
