package sn.sadikh.examen_javafx.model.enums;

public enum StatutRDV {
    PROGRAMME, ANNULE, TERMINE
}
